2009-02-03  David Hyatt  <hyatt@apple.com>

        Rename addLineBoxRects to absoluteRectsForRange, and do the same thing for the corresponding quads methods.  Move the RenderContainer implementations
        of these methods up to RenderObject.
        
        Reviewed by Beth Dakin

        * bindings/objc/DOM.mm:
        (-[DOMNode lineBoxRects]):
        * dom/Range.cpp:
        (WebCore::Range::addLineBoxRects):
        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::drawNodeHighlight):
        * rendering/RenderContainer.cpp:
        * rendering/RenderContainer.h:
        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::absoluteRectsForRange):
        (WebCore::RenderObject::absoluteQuadsForRange):
        * rendering/RenderObject.h:
        * rendering/RenderText.cpp:
        (WebCore::RenderText::absoluteRectsForRange):
        (WebCore::RenderText::absoluteQuadsForRange):
        * rendering/RenderText.h:

2009-02-03  Dirk Schulze  <krit@webkit.org>

        Reviewed by Sam Weinig and Oliver Hunt.

        Added getImageData() support for QtWebKit.

        [QT] lacks getImageData / putImageData support in Canvas
        https://bugs.webkit.org/show_bug.cgi?id=22186

        * platform/graphics/qt/ImageBufferQt.cpp:
        (WebCore::ImageBuffer::getImageData):

2009-02-03  Eric Roman  <eroman@chromium.org>

        Reviewed by Holger Freyther.

        Fix FrameChromium.cpp following r40473 which moved Frame::adjustPageHeight to FrameView::adjustPageHeight.

        * page/chromium/FrameChromium.cpp:
        (WebCore::computePageRectsForFrame):

2009-02-02  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dave Hyatt

        https://bugs.webkit.org/show_bug.cgi?id=23358

        Hook accelerated compositing into RenderLayer.

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::RenderLayer):
        (WebCore::RenderLayer::~RenderLayer):